<resources>
    <string name="app_name">Meteo</string>

    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_city_view" translatable="false">CityView</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="directionAbbreviation">dir.</string>
    <string name="dataRefreshed">Data refreshed</string>
    <string name="updatingData">Updating data…</string>
    <string name="title_activity_add_city" translatable="false">AddCityActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="removeCity">Remove %s?</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="syncInterval">Synchronisation interval</string>
    <string name="syncEnabled">Enable synchronisation</string>
    <string name="saveFailed">Save failed</string>
</resources>
