<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:columnCount="2"
    android:rowCount="7"
    tools:context="manu.meteo.CityView"
    android:useDefaultMargins="true"
    android:transitionGroup="false"
    android:touchscreenBlocksFocus="false"
    android:rowOrderPreserved="false">

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/city"
        android:id="@+id/cityLabel"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/nameTextView"
        android:layout_row="0"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country"
        android:id="@+id/countryLabel"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/countryTextView"
        android:layout_row="1"
        android:layout_column="1"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#070707"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wind"
        android:id="@+id/windLabel"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/windTextView"
        android:layout_row="3"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pressure"
        android:id="@+id/pressureLabel"
        android:layout_row="4"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/pressureTextView"
        android:layout_row="4"
        android:layout_column="1"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/temperatureLabel"
        android:layout_row="5"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/temperatureTextView"
        android:layout_row="5"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/dateLabel"
        android:layout_row="6"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/dateTextView"
        android:layout_row="6"
        android:layout_column="1"/>

</GridLayout>
