<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="manu.meteo.AddCityActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city"
        android:id="@+id/cityNameInputLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityNameInput"
        android:layout_alignBottom="@+id/cityNameInputLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/countryInputLabel"
        android:layout_toEndOf="@+id/countryInputLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/country"
        android:id="@+id/countryInputLabel"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/cityNameInputLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countryInput"
        android:layout_alignBottom="@+id/countryInputLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/countryInputLabel"
        android:layout_toEndOf="@+id/countryInputLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:onClick="save"
        android:layout_marginTop="149dp"
        android:layout_below="@+id/countryInputLabel"
        android:layout_toRightOf="@+id/countryInputLabel"
        android:layout_toEndOf="@+id/countryInputLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancelButton"
        android:onClick="cancel"
        android:layout_below="@+id/saveButton"
        android:layout_toRightOf="@+id/countryInputLabel"
        android:layout_toEndOf="@+id/countryInputLabel" />

</RelativeLayout>
